@@ -24,6 +24,7 @@ next version - not released yet
       subtitle rendering is too slow
 + Ticket #353, Allow to control minimum file duration for remember position feature
 + Ticket #1287, Add after playback command to turn off the monitor.
++ Ticket #1531, Show cover-art while playing audio files
 + Ticket #1407/#2425, Add an advanced option to control the number of recent files. Those files are shown
   in the "Recent Files" menu. It is also the files for which a position is potentially saved
 + Ticket #2194, Show drive label when playing DVD
